<resources>
    <string name="app_name" translatable="false">PocketMarvel</string>
    <string name="stories">Stories</string>
    <string name="characters">Characters</string>
    <string name="creators">Creators</string>
    <string name="comics">Comics</string>
    <string name="series">Series</string>
    <string name="events">Events</string>
    <string name="superhero_thumbnail">Superhero Thumbnail</string>
    <string name="search">Search…</string>
    <string name="missing_description">Description is missing</string>
    <string name="loading">Loading…</string>
    <string name="issue">Issue:</string>
    <string name="page_count">Page count:</string>
    <string name="unknown_year">Unknown year</string>
</resources>
