<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.shared.MainActivity">

    <Button
        android:id="@+id/btn_stories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_series" />

    <Button
        android:id="@+id/btn_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCharactersAction"
        android:text="@string/characters"
        app:layout_constraintBottom_toTopOf="@+id/btn_comics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_creators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creators"
        app:layout_constraintBottom_toTopOf="@+id/btn_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_comics" />

    <Button
        android:id="@+id/btn_comics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comics"
        app:layout_constraintBottom_toTopOf="@+id/btn_creators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_characters" />

    <Button
        android:id="@+id/btn_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/series"
        app:layout_constraintBottom_toTopOf="@+id/btn_stories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_events" />

    <Button
        android:id="@+id/btn_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events"
        app:layout_constraintBottom_toTopOf="@+id/btn_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_creators" />
</android.support.constraint.ConstraintLayout>